@@ -77,11 +77,11 @@ class GlobalConfigurationPage extends AdminEditPage
 			array('label' => 'Force SSL', 'id' => 'jform_force_ssl', 'type' => 'select', 'tab' => 'page-server'),
 			array('label' => 'Server Time Zone', 'id' => 'jform_offset', 'type' => 'select', 'tab' => 'page-server'),
 			array('label' => 'Enable FTP', 'id' => 'jform_ftp_enable', 'type' => 'fieldset', 'tab' => 'page-server'),
-			array('label' => 'FTP Host', 'id' => 'jform_ftp_host', 'type' => 'input', 'tab' => 'page-server'),
-			array('label' => 'FTP Port', 'id' => 'jform_ftp_port', 'type' => 'input', 'tab' => 'page-server'),
-			array('label' => 'FTP Username', 'id' => 'jform_ftp_user', 'type' => 'input', 'tab' => 'page-server'),
-			array('label' => 'FTP Password', 'id' => 'jform_ftp_pass', 'type' => 'input', 'tab' => 'page-server'),
-			array('label' => 'FTP Root', 'id' => 'jform_ftp_root', 'type' => 'input', 'tab' => 'page-server'),
+// 			array('label' => 'FTP Host', 'id' => 'jform_ftp_host', 'type' => 'input', 'tab' => 'page-server'),
+// 			array('label' => 'FTP Port', 'id' => 'jform_ftp_port', 'type' => 'input', 'tab' => 'page-server'),
+// 			array('label' => 'FTP Username', 'id' => 'jform_ftp_user', 'type' => 'input', 'tab' => 'page-server'),
+// 			array('label' => 'FTP Password', 'id' => 'jform_ftp_pass', 'type' => 'input', 'tab' => 'page-server'),
+// 			array('label' => 'FTP Root', 'id' => 'jform_ftp_root', 'type' => 'input', 'tab' => 'page-server'),
 			array('label' => 'Database Type', 'id' => 'jform_dbtype', 'type' => 'select', 'tab' => 'page-server'),
 			array('label' => 'Host', 'id' => 'jform_host', 'type' => 'input', 'tab' => 'page-server'),
 			array('label' => 'Database Username', 'id' => 'jform_user', 'type' => 'input', 'tab' => 'page-server'),
@@ -90,13 +90,13 @@ class GlobalConfigurationPage extends AdminEditPage
 			array('label' => 'Mailer', 'id' => 'jform_mailer', 'type' => 'select', 'tab' => 'page-server'),
 			array('label' => 'From email', 'id' => 'jform_mailfrom', 'type' => 'input', 'tab' => 'page-server'),
 			array('label' => 'From Name', 'id' => 'jform_fromname', 'type' => 'input', 'tab' => 'page-server'),
-			array('label' => 'Sendmail Path', 'id' => 'jform_sendmail', 'type' => 'input', 'tab' => 'page-server'),
-			array('label' => 'SMTP Authentication', 'id' => 'jform_smtpauth', 'type' => 'fieldset', 'tab' => 'page-server'),
-			array('label' => 'SMTP Security', 'id' => 'jform_smtpsecure', 'type' => 'select', 'tab' => 'page-server'),
-			array('label' => 'SMTP Port', 'id' => 'jform_smtpport', 'type' => 'input', 'tab' => 'page-server'),
-			array('label' => 'SMTP Username', 'id' => 'jform_smtpuser', 'type' => 'input', 'tab' => 'page-server'),
-			array('label' => 'SMTP Password', 'id' => 'jform_smtppass', 'type' => 'input', 'tab' => 'page-server'),
-			array('label' => 'SMTP Host', 'id' => 'jform_smtphost', 'type' => 'input', 'tab' => 'page-server'),
+// 			array('label' => 'Sendmail Path', 'id' => 'jform_sendmail', 'type' => 'input', 'tab' => 'page-server'),
+// 			array('label' => 'SMTP Authentication', 'id' => 'jform_smtpauth', 'type' => 'fieldset', 'tab' => 'page-server'),
+// 			array('label' => 'SMTP Security', 'id' => 'jform_smtpsecure', 'type' => 'select', 'tab' => 'page-server'),
+// 			array('label' => 'SMTP Port', 'id' => 'jform_smtpport', 'type' => 'input', 'tab' => 'page-server'),
+// 			array('label' => 'SMTP Username', 'id' => 'jform_smtpuser', 'type' => 'input', 'tab' => 'page-server'),
+// 			array('label' => 'SMTP Password', 'id' => 'jform_smtppass', 'type' => 'input', 'tab' => 'page-server'),
+// 			array('label' => 'SMTP Host', 'id' => 'jform_smtphost', 'type' => 'input', 'tab' => 'page-server'),
 	);
 
 	public $permissions = array('core.login.site', 'core.login.admin', 'core.login.offline', 'core.admin', 'core.manage', 'core.create', 'core.delete', 'core.edit', 'core.edit.state', 'core.edit.own');
